Fix app overflow

--- a/FitnessTime/static_dist/Components/AppComponent/AppComponent.scss
+++ b/FitnessTime/static_dist/Components/AppComponent/AppComponent.scss
@@ -1,3 +1,3 @@
 .app {
-  overflowX: hidden;
+  overflow-x: hidden;
 }
